vlib/v/checker/tests/minus_op_wrong_type_err.out
vlib/v/checker/tests/minus_op_wrong_type_err.vv:10:10: error: mismatched types `Aaa` and `int literal`
    8 | 
    9 | fn main() {
   10 |     println(Aaa{} - 10)
      |             ~~~~~~~~~~
   11 |     println(10 - Aaa{})
   12 |     println([1, 2, 3] - 10)
vlib/v/checker/tests/minus_op_wrong_type_err.vv:11:10: error: mismatched types `int literal` and `Aaa`
    9 | fn main() {
   10 |     println(Aaa{} - 10)
   11 |     println(10 - Aaa{})
      |             ~~~~~~~~~~
   12 |     println([1, 2, 3] - 10)
   13 |     println(10 - [1, 2, 3])
vlib/v/checker/tests/minus_op_wrong_type_err.vv:12:10: error: mismatched types `[]int` and `int literal`
   10 |     println(Aaa{} - 10)
   11 |     println(10 - Aaa{})
   12 |     println([1, 2, 3] - 10)
      |             ~~~~~~~~~~~~~~
   13 |     println(10 - [1, 2, 3])
   14 |     a := map[string]int{}
vlib/v/checker/tests/minus_op_wrong_type_err.vv:13:10: error: mismatched types `int literal` and `[]int`
   11 |     println(10 - Aaa{})
   12 |     println([1, 2, 3] - 10)
   13 |     println(10 - [1, 2, 3])
      |             ~~~~~~~~~~~~~~
   14 |     a := map[string]int{}
   15 |     println(a - 10)
vlib/v/checker/tests/minus_op_wrong_type_err.vv:15:10: error: mismatched types `map[string]int` and `int literal`
   13 |     println(10 - [1, 2, 3])
   14 |     a := map[string]int{}
   15 |     println(a - 10)
      |             ~~~~~~
   16 |     println(10 - a)
   17 |     println(-Aaa{})
vlib/v/checker/tests/minus_op_wrong_type_err.vv:16:10: error: mismatched types `int literal` and `map[string]int`
   14 |     a := map[string]int{}
   15 |     println(a - 10)
   16 |     println(10 - a)
      |             ~~~~~~
   17 |     println(-Aaa{})
   18 |     println(-a)
vlib/v/checker/tests/minus_op_wrong_type_err.vv:17:10: error: operator `-` can only be used with numeric types, but the value after `-` is of type `Aaa` instead
   15 |     println(a - 10)
   16 |     println(10 - a)
   17 |     println(-Aaa{})
      |             ^
   18 |     println(-a)
   19 |     println(-Color.red)
vlib/v/checker/tests/minus_op_wrong_type_err.vv:18:10: error: operator `-` can only be used with numeric types, but the value after `-` is of type `map[string]int` instead
   16 |     println(10 - a)
   17 |     println(-Aaa{})
   18 |     println(-a)
      |             ^
   19 |     println(-Color.red)
   20 | }
vlib/v/checker/tests/minus_op_wrong_type_err.vv:19:10: error: operator `-` can only be used with numeric types, but the value after `-` is of type `Color` instead
   17 |     println(-Aaa{})
   18 |     println(-a)
   19 |     println(-Color.red)
      |             ^
   20 | }
